# yfiles-jupyter-graphs-for-kuzu

./: .gitignore  LICENSE.md  README.md  README_DEV.md  environment.build.yml  environment.dev.yml  pyproject.toml
.github/workflows/: publish.yml
examples/: Kuzu-Movies-Sample.ipynb  introduction.ipynb  ladybug.ipynb
src/yfiles_jupyter_graphs_for_kuzu/: Yfiles_Kuzu_Graphs.py  __init__.py
src/yfiles_jupyter_graphs_for_ryugraph/: Yfiles_RyuGraph_Graphs.py  __init__.py
