[project]
name = "yfiles_jupyter_graphs_for_ryugraph"
version = "1.1.1"
authors = [
  {name = "yWorks Support Team", email= "yfileshtml@yworks.com"},
]
description = "A RyuGraph graph visualization package that uses the yfiles-jupyter-graphs widget"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: IPython",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
]
license = "MIT"
license-files = ["LICENSE.md"]
dependencies = [
  "yfiles_jupyter_graphs>=1.10.9",
]

[project.urls]
License = "https://github.com/yWorks/yfiles-jupyter-graphs-for-ryugraph/blob/main/LICENSE.md"
"Bug Tracker" = "https://github.com/yWorks/yfiles-jupyter-graphs-for-ryugraph/issues"
Documentation = "https://github.com/yWorks/yfiles-jupyter-graphs-for-ryugraph/"
Repository = "https://github.com/yWorks/yfiles-jupyter-graphs-for-ryugraph.git"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
